finaliza exercicio de fixacao parte 1

--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/exercicio-1.html
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/exercicio-1.html
@@ -6,13 +6,23 @@
     <style>
 			h1 {	
 			 font-size: 65px;
+			 color: orange;
 			}
+
+			ul {
+				background-color: powderblue;
+			}
+
+			.pelist {
+				background-color: rgba(166, 196, 33, 0.644);
+			}
+
 		</style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul>
+    <p class="pelist"> Qual é a sua cor favorita?</p>
+    <ul class="pelist">
       <li>Amarelo</li>
       <li>Vermelho</li>
       <li>Marrom</li>
