adiciona font-family reserva

--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/exercicio-2.html
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/exercicio-2.html
@@ -5,7 +5,7 @@
     <title>HTML</title>
     <style>
       h1 {
-        font-family: sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
         text-decoration: underline;
       }
 
