--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/exercicio-1.html
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/exercicio-1.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>HTML</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-			h1 {	
+			/* h1 {	
 			 font-size: 65px;
 			 color: orange;
 			}
@@ -15,7 +16,7 @@
 
 			.pelist {
 				background-color: rgba(166, 196, 33, 0.644);
-			}
+			} */
 
 		</style>
   </head>
