finaliza exercicios para fixar I

--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index-agrupamento_de_seletores_e_pseudoclasses.html
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index-agrupamento_de_seletores_e_pseudoclasses.html
@@ -8,6 +8,8 @@
 
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
+
+    <p>Top 3 dos melhores sites que existem na web</p>
       <ol>
         <li>www.betrybe.com</li>  
         <li>www.google.com</li>
@@ -15,7 +17,12 @@
               
       </ol>
 
-    <p>Top 3 dos melhores sites que existem na web</p>
+    
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+      <li>Possuem conteúdo de qualidade.</li>
+      <li>Tem interface agradável.</li>
+      <li>São de fácil acesso em qualquer dispositivo.</li>
+    </ul>
   </body>
 </html>
