--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index-classes_descendentes.html
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index-classes_descendentes.html
@@ -8,7 +8,7 @@
   <body>
     <h1><em>Combinações e Classes Descendentes</em></h1>
     <br />
-    <h3>Top 5 frases memoráveis:</h3>
+    <h3 class="top5">Top 5 frases memoráveis:</h3>
     <ol>
       <li><em>Com grandes poderes vêm grandes responsabilidades.</em> - Tio Ben (Homem Aranha)</li>
       <li><em>Houston, temos um problema.</em> - Jack Swigert</li>
@@ -16,7 +16,7 @@
       <li><em>Parte da jornada é o fim.</em> - Tony Stark (Homem de Ferro)</li>
       <li><em>Às vezes, o melhor que podemos fazer é começar novamente.</em> - Steve Rogers (Capitão América)</li>
     </ol>
-    <h3>As maiores linguagens de programação:</h3>
+    <h3 class="biggestlanguages"> As maiores linguagens de programação:</h3>
     <ul>
       <li>Python</li>
       <li>Java</li>
@@ -24,7 +24,7 @@
       <li>C#</li>
       <li>C / C++</li>
     </ul>
-    <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
+    <h3 class="biggestallies">Maiores aliados de uma pessoa desenvolvedora:</h3>
     <ul>
       <li>
         <a href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
