--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index-classes_descendentes.html
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index-classes_descendentes.html
@@ -17,10 +17,10 @@
       <li><em>Às vezes, o melhor que podemos fazer é começar novamente.</em> - Steve Rogers (Capitão América)</li>
     </ol>
     <h3 class="biggestlanguages header"> As maiores linguagens de programação:</h3>
-    <ul>
-      <li>Python</li>
-      <li>Java</li>
-      <li>JavaScript</li>
+    <ul class="programming-list">
+      <li class="blue">Python</li>
+      <li class="blue java">Java</li>
+      <li class="blue java">JavaScript</li>
       <li>C#</li>
       <li>C / C++</li>
     </ul>
