5- bonus Para cada link na lista de aliados da pessoa desenvolvedora, faça com que ao passar o mouse sobre cada um, o texto fique em negrito e assuma a cor de fonte de cada site, laranja, verde, preta, amarela e verde

--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index-classes_descendentes.html
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index-classes_descendentes.html
@@ -25,20 +25,20 @@
       <li>C / C++</li>
     </ul>
     <h3 class="biggestallies header">Maiores aliados de uma pessoa desenvolvedora:</h3>
-    <ul>
-      <li>
-        <a href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
+    <ul class="links">
+      <li class="stack">
+        <a  href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
       </li>
       <li>
-        <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
+        <a class="w3" href="https://www.w3schools.com/" target="_blank">W3Schools</a>
       </li>
       <li>
-        <a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN Web Docs</a>
+        <a class="mdn" href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN Web Docs</a>
       </li>
       <li>
-        <a href="https://devdocs.io/" target="_blank">DevDocs</a>
+        <a class="dev" href="https://devdocs.io/" target="_blank">DevDocs</a>
       </li>
-      <li>
+      <li class="trybe">
         <a href="https://app.betrybe.com/" target="_blank">Trybe</a>
       </li>
     </ul>
