cria um conjunto de navegaçao com links internos

--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!--insira os elementos aqui-->
+    <header>
+      <h1>
+        Soco a 80km/h: Conheça o Stomatopoda
+      </h1>
+    </header>
+    <nav>
+      <a href="">Página Inicial</a>
+      <a href="">Sobre</a>
+      <a href="">Contato</a>
+    </nav>
   </body>
 </html>
