--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -17,5 +17,12 @@
       <a href="">Sobre</a>
       <a href="">Contato</a>
     </nav>
+    <article>
+      <h2>Fatos sobre o Stomatopoda</h2>
+      <ul>
+        <li></li>
+      </ul>
+    </article>
+   
   </body>
 </html>
