adiciona fatos interessantes sobre o stomatopoda

--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -20,8 +20,10 @@
     <article>
       <h2>Fatos sobre o Stomatopoda</h2>
       <ul>
-        <li></li>
-      </ul>
+        <li>O stomatopoda tem a visão mais sofisticada de todos os predadores da Terra.</li>
+        <li>Ele também possui o ataque mais rápido do planeta.</li>
+        <li>Seu golpe é tão rápido que por um instante a superficie de sua presa atinge a temperatura do sol.</li>
+       </ul>
     </article>
    
   </body>
