pagina aprovada no code sniffer

--- a/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/01-fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css">
+    <title>Stomatopoda</title>
   </head>
   <body>
     <!--insira os elementos aqui-->
     <header>
-      <h1>
+      <h1 id="inicio">
         Soco a 80km/h: Conheça o Stomatopoda
       </h1>
     </header>
     <nav>
-      <a href="">Página Inicial</a>
-      <a href="">Sobre</a>
-      <a href="">Contato</a>
+      <a href="#inicio">Página Inicial</a>
+      <a href="#main-article">Sobre</a>
+      <a href="#contato">Contato</a>
     </nav>
     <article>
       <h2>Fatos sobre o Stomatopoda</h2>
@@ -61,7 +62,7 @@
         </tr>
       </table>
     </section>
-    <section>
+    <section id="main-article">
       <h3>A visão</h3>
       <img src="https://static.inaturalist.org/photos/30551110/original.jpeg?1548234894" width="400px" alt="stomatopodaEyes">
      <p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois <strong>enxergam 12 cores primárias</strong>, correspondentes aos 12 pigmentos distintos presentes em sua retina.<br><br>Nossos olhos possuem três tipos desses receptores - que correspondem à luz azul, verde e vermelha -, que nos permitem perceber o espectro de cores que vemos. Os cães contam com apenas dois tipos de cones (verde e azul), e é por isso que eles vêm tons de azul, verde e um pouco de amarelo.<br><br>Como cada cone pode ver cerca de 100 cores, os estomatópodes são capazes de ver 1024 cores, ou seja, 1 septilhão de cores. Em comparação, o olho humano vê 106 cores, ou seja, 1 milhão de cores apenas.A visão dos estomatópodes é sensível à luz ultravioleta, mas ainda é desconhecido se ela pode distinguir a luz infravermelha.</p>
@@ -88,6 +89,6 @@
       </ul>
     </section>
     
-    <footer><em>Conteúdo compilado por Elthon Villa, 2021.</em></footer>
+    <footer id="contato"><em>Conteúdo compilado por <a href="https://github.com/elthonvilla" target="_blank">Elthon Villa</a>, 2021.</em></footer>
   </body>
 </html>
