finaliza ex01 req 3

--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/ex01.html
@@ -67,6 +67,11 @@
       changeMainSectionBackgroundColor("blue");
 
       //'  Crie uma função que mude a cor do quadrado vermelho para branco.
+      function changeCenterContent() {
+        let color = 'white';
+        document.getElementsByClassName('center-content')[0].style.background = color;
+      }
+      changeCenterContent();
       
       //  Crie uma função que corrija o texto da tag <h1>.
       //  Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
