finaliza ex01 red 4

--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/ex01.html
@@ -48,7 +48,7 @@
         - document.getElementById()
         - document.getElementsByClassName()
         - document.getElementsByTagName()
- Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)*/
+1-  Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)*/
       function updateMainSection(meInTwoYears) {
         let text = "";
         text = meInTwoYears;
@@ -58,22 +58,29 @@
         " Crie uma função que mude o texto na tag p para uma descrição de como você se vê daqui a 2 anos. <br><br> Me vejo muuuuuuuito feliz, fazendo propaganda da <strong>Trybe</Strong> pra todas as pessoas que eu encontro pela frente enfatizando como ela transformou minha vida!!"
       );
 
-      //  Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
+      //  2- Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
       function changeMainSectionBackgroundColor(backgroundColor) {
         let color = "rgb(76,164,109)";
         document.getElementsByClassName("main-content")[0].style.background =
           color;
-      };
+      }
       changeMainSectionBackgroundColor("blue");
 
-      //'  Crie uma função que mude a cor do quadrado vermelho para branco.
+      //'  3- Crie uma função que mude a cor do quadrado vermelho para branco.
       function changeCenterContent() {
-        let color = 'white';
-        document.getElementsByClassName('center-content')[0].style.background = color;
+        let color = "white";
+        document.getElementsByClassName("center-content")[0].style.background =
+          color;
       }
       changeCenterContent();
-      
-      //  Crie uma função que corrija o texto da tag <h1>.
+
+      //  4- Crie uma função que corrija o texto da tag <h1>.
+      function correctH1() {
+        let text = "Exercício 5.1 - JavaScript DOM";
+        document.getElementsByTagName("h1")[0].innerText = text;
+      }
+      correctH1();
+
       //  Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
       //  Crie uma função que exiba o conteúdo de todas as tags <p> no console.
     </script>
