--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/ex01.html
@@ -89,13 +89,13 @@
       upperCaseP();
 
       //  6- Crie uma função que exiba o conteúdo de todas as tags <p> no console.
-        function showTagP() {
-          let arrayTagsP = document.getElementsByTagName('p');
-         for (let i = 0; i < arrayTagsP.length; i +=1) {
-           console.log(arrayTagsP[i].innerText);           
-         }
+      function showTagP() {
+        let arrayTagsP = document.getElementsByTagName("p");
+        for (let i = 0; i < arrayTagsP.length; i += 1) {
+          console.log(arrayTagsP[i].innerText);
         }
-        showTagP();
+      }
+      showTagP();
     </script>
   </body>
 </html>
