altera o background para backgroundcolor

--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/ex01.html
@@ -61,16 +61,18 @@
       //  2- Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
       function changeMainSectionBackgroundColor(backgroundColor) {
         let color = "rgb(76,164,109)";
-        document.getElementsByClassName("main-content")[0].style.background =
-          color;
+        document.getElementsByClassName(
+          "main-content"
+        )[0].style.backgroundColor = color;
       }
       changeMainSectionBackgroundColor("blue");
 
       //'  3- Crie uma função que mude a cor do quadrado vermelho para branco.
       function changeCenterContent() {
         let color = "white";
-        document.getElementsByClassName("center-content")[0].style.background =
-          color;
+        document.getElementsByClassName(
+          "center-content"
+        )[0].style.backgroundColor = color;
       }
       changeCenterContent();
 
