--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
@@ -69,11 +69,15 @@ main.className = 'main-content';
 body.appendChild(main);
 
 // 3- Adicione a tag section com a classe center-content como filho da tag main criada no passo 2;
-const section1 = document.createElement(section);
+const section1 = document.createElement('section');
 section1.className = 'center-content';
-body.appendChild(section1);
+main.appendChild(section1);
 
 // 4- Adicione a tag p como filho do section criado no passo 3 e coloque algum texto;
+const p1 = document.createElement('p');
+p1.innerText = 'Que alegria ver isso dando certo Meu DEOOOOS!!!';
+section1.appendChild(p1);
+
 // 5- Adicione a tag section com a classe left-content como filho da tag main criada no passo 2;
 // 6- Adicione a tag section com a classe right-content como filho da tag main criada no passo 2;
 // 7- Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image . Esse elemento deve ser filho do section criado no passo 5;
