--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
@@ -79,6 +79,10 @@ p1.innerText = 'Que alegria ver isso dando certo Meu DEOOOOS!!!';
 section1.appendChild(p1);
 
 // 5- Adicione a tag section com a classe left-content como filho da tag main criada no passo 2;
+const sectionLeft = document.createElement('section');
+sectionLeft.className = 'left-content';
+main.appendChild(sectionLeft);
+
 // 6- Adicione a tag section com a classe right-content como filho da tag main criada no passo 2;
 // 7- Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image . Esse elemento deve ser filho do section criado no passo 5;
 // 8- Adicione uma lista não ordenada com os valores de 1 a 10 por extenso, ou seja, um , dois , três , ... como valores da lista. Essa lista deve ser filha do section criado no passo 6;
