--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
@@ -89,6 +89,11 @@ sectionRight.className = 'right-content';
 main.appendChild(sectionRight);
 
 // 7- Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image . Esse elemento deve ser filho do section criado no passo 5;
+const image = document.createElement('img');
+image.src = 'https://picsum.photos/200';
+image.className = 'small-image';
+sectionLeft.appendChild(image);
+
 // 8- Adicione uma lista não ordenada com os valores de 1 a 10 por extenso, ou seja, um , dois , três , ... como valores da lista. Essa lista deve ser filha do section criado no passo 6;
 // 9- Adicione 3 tags h3 , todas sendo filhas do main criado no passo 2.
     </script>
