cria 3 tags h3 filhas do main

--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
@@ -108,6 +108,17 @@ for (let i = 0 ; i < listaNumeros.length ; i+= 1){
 }
 
 // 9- Adicione 3 tags h3 , todas sendo filhas do main criado no passo 2.
+const h3a = document.createElement('h3');
+main.appendChild(h3a);
+
+const h3b = document.createElement('h3');
+main.appendChild(h3b);
+
+const h3c = document.createElement('h3');
+main.appendChild(h3c);
+
+
+
     </script>
   </body>
 </html>
