--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
@@ -117,7 +117,19 @@ main.appendChild(h3b);
 const h3c = document.createElement('h3');
 main.appendChild(h3c);
 
+//   Agora que você criou muita coisa, vamos fazer algumas alterações e remoções:
+// 10- Adicione a classe title na tag h1 criada;
+title.className = 'title';
 
+// 11- Adicione a classe description nas 3 tags h3 criadas;
+
+// 12- Remova a section criado no passo 5 (aquele que possui a classe left-content ). Utilize a função .removeChild() ;
+
+// 13- Centralize a section criado no passo 6 (aquele que possui a classe right-content ). Dica: para centralizar, basta configurar o margin-right: auto da section ;
+
+// 14- Troque a cor de fundo do elemento pai da section criada no passo 3 (aquela que possui a classe center-content ) para a cor verde;
+
+// 15- Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8.
 
     </script>
   </body>
