--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
@@ -122,6 +122,10 @@ main.appendChild(h3c);
 title.className = 'title';
 
 // 11- Adicione a classe description nas 3 tags h3 criadas;
+document.getElementsByTagName('h3')[0].className = 'description';
+document.getElementsByTagName('h3')[1].className = 'description';
+document.getElementsByTagName('h3')[2].className = 'description';
+
 
 // 12- Remova a section criado no passo 5 (aquele que possui a classe left-content ). Utilize a função .removeChild() ;
 
