--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
@@ -126,9 +126,8 @@ document.getElementsByTagName('h3')[0].className = 'description';
 document.getElementsByTagName('h3')[1].className = 'description';
 document.getElementsByTagName('h3')[2].className = 'description';
 
-
 // 12- Remova a section criado no passo 5 (aquele que possui a classe left-content ). Utilize a função .removeChild() ;
-
+main.removeChild(sectionLeft);
 // 13- Centralize a section criado no passo 6 (aquele que possui a classe right-content ). Dica: para centralizar, basta configurar o margin-right: auto da section ;
 
 // 14- Troque a cor de fundo do elemento pai da section criada no passo 3 (aquela que possui a classe center-content ) para a cor verde;
