--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
@@ -134,6 +134,7 @@ sectionRight.style.marginRight = 'auto';
 
 
 // 14- Troque a cor de fundo do elemento pai da section criada no passo 3 (aquela que possui a classe center-content ) para a cor verde;
+section1.parentElement.style.backgroundColor = 'cyan';
 
 // 15- Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8.
 
