--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/ex01.html
@@ -104,7 +104,7 @@ for (let i = 0 ; i < listaNumeros.length ; i+= 1){
 
   let linhaLista = document.createElement('li');
   linhaLista.innerText = num;
-  sectionRight.appendChild(linhaLista);
+  lista.appendChild(linhaLista);
 }
 
 // 9- Adicione 3 tags h3 , todas sendo filhas do main criado no passo 2.
@@ -137,6 +137,9 @@ sectionRight.style.marginRight = 'auto';
 section1.parentElement.style.backgroundColor = 'cyan';
 
 // 15- Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8.
+lista.lastChild.remove();
+lista.lastChild.remove();
+
 
     </script>
   </body>
