finaliza implementacao de botoes e inputs para modificacao no texto

--- a/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/ex01.html
+++ b/01-fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/ex01.html
@@ -42,27 +42,27 @@
     <div id="div preferences">
       <h2>Altere suas preferências aqui:</h2>
       <div>
-        <p>Cor de fundo da tela</p>
+        <p>Cor de fundo da tela <em> (ex: lightGreen)</em></p>
         <input class="input"/>
         <button id="btnBackgroundColor">Alterar</button>
       </div>
       <div>
-        <p>Cor do texto</p>
+        <p>Cor do texto <em> (ex: blue)</em></p>
         <input class="input"/>
         <button id="btnTextColor">Alterar</button>
       </div>
       <div>
-        <p>Tamanho da fonte</p>
+        <p>Tamanho da fonte <em>(ex: 12px)</em></p>
         <input class="input"/>
         <button id="btnFontSize">Alterar</button>
       </div>
       <div>
-        <p>Espaçamento entre as linhas do texto</p>
+        <p>Espaçamento entre as linhas do texto <em>(ex: 17px)</em></p>
         <input class="input"/>
         <button id="btnLineHeight">Alterar</button>
       </div>
       <div>
-        <p>Tipo da fonte</p>
+        <p>Tipo da fonte <em>(ex: Helvetica)</em></p>
         <input class="input"/>
         <button id="btnFontFamily">Alterar</button>
       </div>
