--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
@@ -16,7 +16,7 @@
     <label for="cpf"><input id="cpf" name="cpf" type="text" placeholder="cpf" required maxlength="11" ></label><br><br>
     <label for="endereco"><input id="endereco" name="endereco" type="text" placeholder="Endereço" required maxlength="200" ></label><br><br>
     <label for="cidade"><input id="cidade" name="cidade" type="text" placeholder="Cidade" required maxlength="28" ></label><br><br>   
-    <label for="state" ><select id="state" required></select></label>    
+    <label for="state" > Estado <select id="state" required></select></label>    
   </fieldset>
   
   <script src="script.js"></script>
