adiciona radio button para tipo de residencia finalizando parte 1 do exercicio

--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
@@ -16,7 +16,9 @@
     <label for="cpf"><input id="cpf" name="cpf" type="text" placeholder="cpf" required maxlength="11" ></label><br><br>
     <label for="endereco"><input id="endereco" name="endereco" type="text" placeholder="Endereço" required maxlength="200" ></label><br><br>
     <label for="cidade"><input id="cidade" name="cidade" type="text" placeholder="Cidade" required maxlength="28" ></label><br><br>   
-    <label for="state" > Estado <select id="state" required></select></label>    
+    <label for="state" > Estado <select id="state" name="state" required></select></label><br><br>
+    <label for="tipo"><input id="tipo" name="tipo-resid" type="radio" required >Casa</label>
+    <label for="tipo2"><input id="tipo2" name="tipo-resid" type="radio" required >Apartamento</label> 
   </fieldset>
   
   <script src="script.js"></script>
