cria botao que limpa todos os campos do formulario e a impressao anterior

--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
@@ -45,7 +45,8 @@
         <label for="date">Data de início</label><br />
         <input type="date" id="date" class="required" name="date" required />
       </fieldset>
-      <button id="button" type="submit">Avançar</button>
+      <button id="button" type="submit">Submeter</button>
+      <button id="clear">Limpar</button>
     </form>
     <div id="print"><br></div>
   </main>
