--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HTML Forms 6.1</title>
+  <!-- <link rel="stylesheet" href="../../../bootstrap.min.css"> -->
 </head>
 <header>
   <h1>Currículo</h1>
@@ -13,32 +14,30 @@
 
 <body>
   <main>
-    <form method="GET">
+    <form action="" method="GET" enctype="multipart/form-data">
       <fieldset>
-        <label for="name">Nome: <input class="required" id="name" name="name" type="text" placeholder="Nome" required
-            maxlength="40" /></label><br /><br />
-        <label for="email">Email: <input class="required" id="email" name="email" type="email" placeholder="Email"
-            required maxlength="40" /></label><br /><br />
-        <label for="cpf"> CPF: <input class="required" id="cpf" name="cpf" type="text" placeholder="cpf" required
-            maxlength="11" /></label><br /><br />
-        <label for="endereco">Endereço: <input class="required" id="endereco" name="endereco" type="text"
-            placeholder="Endereço" required maxlength="200" /></label><br /><br />
-        <label for="cidade">Cidade: <input class="required" id="cidade" name="cidade" type="text" placeholder="Cidade"
-            required maxlength="28" /></label><br /><br />
-        <label for="state">
-          Estado
-          <select id="state" class="required" name="state" required></select></label><br /><br />
-        <input id="tipo" class="required" name="tipo-resid" type="radio" required />
+        <div class="form-control"><label for="name">Nome: </label><input class="required" id="name" name="name" type="text" placeholder="Nome" required
+        maxlength="40" /></div>
+        <div class="form-control"><label for="email">Email: </label><input class="required" id="email" name="email" type="email" placeholder="Email"
+        required maxlength="40" /></div>
+        <div class="form-control"><label for="cpf"> CPF: </label><input class="required" id="cpf" name="cpf" type="text" placeholder="cpf" required
+        maxlength="11" /></div>
+      <div class="form-control"><label for="endereco">Endereço: </label><input class="required" id="endereco" name="endereco" type="text"
+        placeholder="Endereço" required maxlength="200" /></div>
+      <div class="form-control"><label for="cidade">Cidade: </label><input class="required" id="cidade" name="cidade" type="text" placeholder="Cidade"
+        required maxlength="28" /></div>
+        <label for="state">Estado<select id="state" class="required" name="state" required></select></label><br /><br />
+        <div class="form-control"><input id="tipo" class="required" name="tipo-resid" type="radio" required />
         <label for="tipo">Casa</label>
         <input id="tipo2" name="tipo-resid" type="radio" required />
-        <label for="tipo2">Apartamento</label>
+        <label for="tipo2">Apartamento</label></div>
       </fieldset>
       <fieldset>
         <label for="resumo">Sobre seu último emprego</label><br />
         <textarea id="resumo" class="required" name="resumo" required rows="5" cols="40" maxlength="1000"
           placeholder="Máximo 1000 caractéres."></textarea><br />
-        <label for="cargo">Cargo</label><br />
-        <input id="cargo" class="required" name="cargo" type="text" /><br />
+        <div class="form-control"><label for="cargo">Cargo</label><br />
+        <input id="cargo" class="required" name="cargo" type="text" /></div>
         <label for="description">Descrição do cargo</label><br />
         <textarea id="description" class="required" name="description" required rows="5" cols="40" maxlength="500"
           placeholder="Máximo 500 caractéres."></textarea><br />
@@ -51,6 +50,8 @@
     <div id="print"><br></div>
   </main>
   <script src="script.js"></script>
+  <!-- <script src="/jquery-3.6.0.min.js"></script> -->
+  <!-- <script src="../../../bootstrap.min.js"></script> -->
 </body>
 
 </html>
