--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-javascript-e-frameworks-css/form.html
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-javascript-e-frameworks-css/form.html
@@ -6,52 +6,54 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HTML Forms 6.1</title>
-  <!-- <link rel="stylesheet" href="../../../bootstrap.min.css"> -->
+  <link rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 </head>
 <header>
-  <h1>Currículo</h1>
+  <h1 class="display-2 text-muted">Currículo</h1>
 </header>
 
 <body>
   <main>
     <form action="" method="GET" enctype="multipart/form-data">
-      <fieldset>
-        <div class="form-control"><label for="name">Nome: </label><input class="required" id="name" name="name" type="text" placeholder="Nome" required
+      <fieldset class="form-control ">
+        <div class="form-group "><label for="name">Nome: </label><input class="form-control required" id="name" name="name" type="text" placeholder="Nome" required
         maxlength="40" /></div>
-        <div class="form-control"><label for="email">Email: </label><input class="required" id="email" name="email" type="email" placeholder="Email"
+        <div class="form-control"><label for="email">Email: </label><input class="form-control required" id="email" name="email" type="email" placeholder="Email"
         required maxlength="40" /></div>
-        <div class="form-control"><label for="cpf"> CPF: </label><input class="required" id="cpf" name="cpf" type="text" placeholder="cpf" required
+        <div class="form-control"><label for="cpf"> CPF: </label><input class="form-control required" id="cpf" name="cpf" type="text" placeholder="cpf" required
         maxlength="11" /></div>
-      <div class="form-control"><label for="endereco">Endereço: </label><input class="required" id="endereco" name="endereco" type="text"
+      <div class="form-control"><label for="endereco">Endereço: </label><input class="form-control required" id="endereco" name="endereco" type="text"
         placeholder="Endereço" required maxlength="200" /></div>
-      <div class="form-control"><label for="cidade">Cidade: </label><input class="required" id="cidade" name="cidade" type="text" placeholder="Cidade"
+      <div class="form-control"><label for="cidade">Cidade: </label><input class="form-control required" id="cidade" name="cidade" type="text" placeholder="Cidade"
         required maxlength="28" /></div>
-        <label for="state">Estado<select id="state" class="required" name="state" required></select></label><br /><br />
-        <div class="form-control"><input id="tipo" class="required" name="tipo-resid" type="radio" required />
+        <div class="form-control "><label for="state">Estado<select class="form-control required" id="state" name="state" required></select></label><br /><br />
+        </div><div class="form-control"><input class="required" id="tipo" name="tipo-resid" type="radio" required />
         <label for="tipo">Casa</label>
         <input id="tipo2" name="tipo-resid" type="radio" required />
         <label for="tipo2">Apartamento</label></div>
       </fieldset>
-      <fieldset>
+      <fieldset class="form-control ">
         <label for="resumo">Sobre seu último emprego</label><br />
-        <textarea id="resumo" class="required" name="resumo" required rows="5" cols="40" maxlength="1000"
+        <textarea id="resumo" class="form-control required" name="resumo" required rows="5" cols="40" maxlength="1000"
           placeholder="Máximo 1000 caractéres."></textarea><br />
         <div class="form-control"><label for="cargo">Cargo</label><br />
-        <input id="cargo" class="required" name="cargo" type="text" /></div>
+        <input id="cargo" class="form-control required" name="cargo" type="text" /></div>
         <label for="description">Descrição do cargo</label><br />
-        <textarea id="description" class="required" name="description" required rows="5" cols="40" maxlength="500"
+        <textarea id="description" class="form-control required" name="description" required rows="5" cols="40" maxlength="500"
           placeholder="Máximo 500 caractéres."></textarea><br />
         <label for="date">Data de início</label><br />
         <input type="date" id="date" class="required" name="date" required />
       </fieldset>
-      <button id="button" type="submit">Submeter</button>
-      <button id="clear">Limpar</button>
+      <div class="form-control">
+      <button id="button" class="btn btn-success" type="submit">Submeter</button>
+      <button id="clear" class="btn btn-success">Limpar</button>
+    </div>
     </form>
     <div id="print"><br></div>
   </main>
   <script src="script.js"></script>
-  <!-- <script src="/jquery-3.6.0.min.js"></script> -->
-  <!-- <script src="../../../bootstrap.min.js"></script> -->
+  <script src="/jquery-3.6.0.min.js"></script>
+  <script src="/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
