descobri por acaso a importancia da propriedade align-content (sera abordado na proxima parte) so nao entendi ainda o motivo de o stretch ser o padrao, flex-start fica muito mais agradavel :D

--- a/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/fix01.html
+++ b/01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/fix01.html
@@ -14,7 +14,7 @@
       height: 60px;
       margin: 10px 5px;
       text-align: center;
-      width: 30%;
+      width: 100px;
     }
 
     .box-container {
@@ -26,8 +26,10 @@
          3 - Teste as possibilidades para a propriedade flex-flow .   */
       /* flex-direction: column-reverse;
       flex-wrap: wrap-reverse; */
-      flex-flow: row-reverse wrap-reverse;
-      width: 600px;
+      flex-flow: row wrap;
+      width: 342px;
+      height: 400px;
+      align-content: flex-start;
     }
   </style>
 
