--- a/01-fundamentos/bloco-07-introducao-a-javascript-es6-e-testes-unitarios/dia-1-javascript-es6-let-const-arrow-functions-e-template-literals/ex05.html
+++ b/01-fundamentos/bloco-07-introducao-a-javascript-es6-e-testes-unitarios/dia-1-javascript-es6-let-const-arrow-functions-e-template-literals/ex05.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
+  <!-- Crie uma página que contenha:
+  Um botão ao qual será associado um event listener ;
+  Uma variável clickCount no arquivo JavaScript que acumule o número de clicks no botão;
+  Um campo no HTML que vá atualizando a quantidade de clicks no botão conforme a variável clickCount é atualizada.
+   -->
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
