--- a/01-fundamentos/bloco-9-javascript-e-testes-assincronos/dia-2-javascript-assincrono-fetch-api-e-asyncawait/fix01.html
+++ b/01-fundamentos/bloco-9-javascript-e-testes-assincronos/dia-2-javascript-assincrono-fetch-api-e-asyncawait/fix01.html
@@ -25,8 +25,7 @@
         <ul id="languages-used-by"></ul>
       </article>
     </main>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="fix01.js"></script>
   </body>
 
   </html>
-  
