complementa resposta de questao 5

--- a/01-fundamentos/bloco-9-javascript-e-testes-assincronos/dia-2-javascript-assincrono-fetch-api-e-asyncawait/toFixQuestions.html
+++ b/01-fundamentos/bloco-9-javascript-e-testes-assincronos/dia-2-javascript-assincrono-fetch-api-e-asyncawait/toFixQuestions.html
@@ -13,6 +13,6 @@ R- Pois ao invés de enfileirar várias callbacks para ordenar um código se tor
 R- Assíncrona não bloqueante, enquanto aguardo a resposta da API o restante da página que não tem relação com essa resposta pode seguir carregando. Apesar de a comunicação ser assíncrona, o fluxo de dados desse bloco de código deve ser síncrono para que a resposta desejada não seja carregada antes da informação requisitada chegar e ser devidamente tratada.
 
 5- Dada a resposta anterior, o que é fetch e para que ele serve? 
-R- Fetch é recurso utilizado em JS que trata requisições http. Através do fetch é possível solicitar requisições a APIs, tratar erros, tratar dados recebidos e desenvolver os mesmos.
+R- Fetch é recurso utilizado em JS que trata requisições http. Através do fetch é possível solicitar requisições a APIs, tratar erros, tratar dados recebidos e desenvolver os mesmos. Através do Fetch é possível ordenar o fluxo de dados de um bloco de código de forma síncrona.
 
 -->
