ex01 dad jokes running

--- a/01-fundamentos/bloco-9-javascript-e-testes-assincronos/dia-2-javascript-assincrono-fetch-api-e-asyncawait/ex01-dad-jokes.html
+++ b/01-fundamentos/bloco-9-javascript-e-testes-assincronos/dia-2-javascript-assincrono-fetch-api-e-asyncawait/ex01-dad-jokes.html
@@ -1,6 +1,6 @@
 <!-- jokes.html -->
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html >
+<html lang="pt-br">
   <head>
     <title>Best jokes ever</title>
     <script src="ex01-dad-jokes.js" ></script>
