--- a/01-fundamentos/bloco-9-javascript-e-testes-assincronos/dia-2-javascript-assincrono-fetch-api-e-asyncawait/ex02-crypto.html
+++ b/01-fundamentos/bloco-9-javascript-e-testes-assincronos/dia-2-javascript-assincrono-fetch-api-e-asyncawait/ex02-crypto.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crypto-Coins</title>
- 
+
 </head>
 
 <body>
-  <h1>Crypto coins list!</h1>
+  <h1>Crypto coins! Valor em dólares</h1>
 
   <script src="ex02-crypto.js"></script>
 </body>
