--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-Redux.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-Redux.html
@@ -43,6 +43,14 @@
       // 1 - Crie uma store para a nossa aplicação.
       const store = createStore.Redux(reducer);
 
+      // 2 - Crie um reducer, implementando um switch retornando apenas o estado inicial como default . Não se esqueça de colocar o reducer como parâmetro para o createStore , feito na etapa anterior.
+      const reducer = (state = ESTADO_INICIAL, action) => {
+        switch (action.type) {
+          default:
+            return state;
+        };
+      };
+
     </script>
   </body>
 </html>
