Ex01 - Requisito 3, incrementa um reducer actions para avançar para próxima ou para a cor anterior

--- a/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-Redux.html
+++ b/2-front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/Ex01-Redux.html
@@ -45,11 +45,32 @@
 
       // 2 - Crie um reducer, implementando um switch retornando apenas o estado inicial como default . Não se esqueça de colocar o reducer como parâmetro para o createStore , feito na etapa anterior.
       const reducer = (state = ESTADO_INICIAL, action) => {
+      switch (action.type) {
+        default:
+          return state;
+      }
+    };
+
+    const store = Redux.createStore(reducer);
+      // 3 - Incremente o switch criado no exercício anterior com as actions NEXT_COLOR e PREVIOUS_COLOR . Essas actions devem alterar o valor index guardado no ESTADO_INICIAL . Atente-se aos limites de tamanho do array, as posições devem iniciar em 0 e não podem exceder a numeração do último item do array.
+      const reducerChangeColor = (state = ESTADO_INICIAL, action) => {
         switch (action.type) {
+          case "NEXT_COLOR" :
+            return {
+              ...state,
+              index: state.index === state.colors.length - 1 ? 0 : state.index + 1,
+            };
+            case "PREVIOUS_COLOR" :
+              return {
+                ...state,
+                index: state.index === 0 ? state.colors.length - 1 : state.index - 1,
+              };
           default:
             return state;
         };
       };
+
+      const store = Redux.reducerChangeColor(reducer);
 
     </script>
   </body>
